--- a/src/styles/size.css
+++ b/src/styles/size.css
@@ -16,4 +16,11 @@
     --size-13: 15rem;
     --size-14: 20rem;
     --size-15: 30rem;
+    --size-xxs: 240px;
+    --size-xs: 360px;
+    --size-sm: 480px;
+    --size-md: 768px;
+    --size-lg: 1024px;
+    --size-xl: 1440px;
+    --size-xxl: 1920px;
 }
