--- a/src/main.css
+++ b/src/main.css
@@ -34,7 +34,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 100%;
     padding-top: env(safe-area-inset-top);
     padding-right: env(safe-area-inset-right);
     padding-bottom: env(safe-area-inset-bottom);
