--- a/src/main.css
+++ b/src/main.css
@@ -34,9 +34,5 @@
 }
 
 body {
-    height: 100%;
-    padding-top: env(safe-area-inset-top);
-    padding-right: env(safe-area-inset-right);
-    padding-bottom: env(safe-area-inset-bottom);
-    padding-left: env(safe-area-inset-left);
+    height: 100vh;
 }
