--- a/src/main.css
+++ b/src/main.css
@@ -17,10 +17,12 @@
 
   --primary-hsl: 49 79% 53%;
   --background-hsl: 317 17% 8%;
+  --popover-hsl: 316 18% 12%;
 
   --primary: hsl(var(--primary-hsl));
   --destructive: #bc3908;
   --background: hsl(var(--background-hsl));
+  --popover: hsl(var(--popover-hsl));
   --foreground: hsla(0, 0%, 100%, 0.9);
 
   border-color: hsl(var(--magnolia-hsl) / 10%);
