--- a/src/main.css
+++ b/src/main.css
@@ -21,6 +21,9 @@
   --background-hsl: 317 17% 8%;
   --popover-hsl: 316 18% 12%;
 
+  --muted-hsl: 12 6.5% 15.1%;
+  --muted-foreground-hsl: 24 5.4% 63.9%;
+
   --primary: hsl(var(--primary-hsl));
   --primary-foreground: hsl(var(--primary-foreground-hsl));
   --secondary: hsl(var(--secondary-hsl));
@@ -28,6 +31,8 @@
   --background: hsl(var(--background-hsl));
   --popover: hsl(var(--popover-hsl));
   --foreground: hsla(0, 0%, 100%, 0.9);
+  --muted: hsl(var(--muted-hsl));
+  --muted-foreground: hsl(var(--muted-foreground-hsl));
 
   border-color: hsl(var(--magnolia-hsl) / 10%);
   background-color: var(--raisin-black);
