--- a/src/lib/styles/font.css
+++ b/src/lib/styles/font.css
@@ -19,4 +19,12 @@
   --font-weight-7: 700;
   --font-weight-8: 800;
   --font-weight-9: 900;
+
+  --font-lineheight-00: .95;
+  --font-lineheight-0: 1.1;
+  --font-lineheight-1: 1.25;
+  --font-lineheight-2: 1.375;
+  --font-lineheight-3: 1.5;
+  --font-lineheight-4: 1.75;
+  --font-lineheight-5: 2;
 }
