--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@
 @import "./lib/styles/colors.css";
 @import "./lib/styles/border.css";
 @import "./lib/styles/shadows.css";
+@import "./lib/styles/zindex.css";
 
 @font-face {
   font-weight: 300 900;
