shorthand variables for env

--- a/src/main.css
+++ b/src/main.css
@@ -37,6 +37,11 @@
 
   --color-accent: #ECBE71;
   --color-accent-foreground: hsla(0, 0%, 0%, 0.9);
+
+  --safe-top: env(safe-area-inset-top, 8px);
+  --safe-right: env(safe-area-inset-right, 8px);
+  --safe-bottom: env(safe-area-inset-bottom, 8px);
+  --safe-left: env(safe-area-inset-left, 8px);
 }
 
 body {
