--- a/src/lib/styles/font.css
+++ b/src/lib/styles/font.css
@@ -20,7 +20,7 @@
   --font-weight-8: 800;
   --font-weight-9: 900;
 
-  --font-lineheight-00: .95;
+  --font-lineheight-00: 0.95;
   --font-lineheight-0: 1.1;
   --font-lineheight-1: 1.25;
   --font-lineheight-2: 1.375;
