--- a/src/main.css
+++ b/src/main.css
@@ -28,14 +28,14 @@
 
   --color-surface: #363136;
 
-  --color-primary: #E7E0DA;
+  --color-primary: #e7e0da;
   --color-primary-foreground: hsla(0, 0%, 0%, 0.9);
 
   --color-border: hsla(0, 0%, 100%, 0.5);
 
   --color-divide: hsla(0, 0%, 100%, 0.2);
 
-  --color-accent: #ECBE71;
+  --color-accent: #ecbe71;
   --color-accent-foreground: hsla(0, 0%, 0%, 0.9);
 
   --safe-top: env(safe-area-inset-top, 8px);
